outputs/2a14c144-19f6-4648-aeea-377f29574f9d.txt
Compilation Error:
/mnt/c/Users/akomm/Documents/Online_Judge_Iter1/codes/2a14c144-19f6-4648-aeea-377f29574f9d.java:1: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error
